# vibevj

./: .gitignore  BUILDING.md  Cargo.toml  LICENSE-MIT  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md
assets/shaders/: basic.wgsl  blit.wgsl
crates/vibevj-audio/: Cargo.toml
crates/vibevj-audio/src/: analyzer.rs  frequency.rs  input.rs  lib.rs
crates/vibevj-common/: Cargo.toml
crates/vibevj-common/src/: error.rs  lib.rs  types.rs
crates/vibevj-engine/: Cargo.toml
crates/vibevj-engine/src/: camera.rs  lib.rs  material.rs  mesh.rs  mesh_gen.rs  pipeline.rs  render_object.rs  render_target.rs  renderer.rs  shader.rs  texture.rs
crates/vibevj-gui/: Cargo.toml
crates/vibevj-gui/src/: app.rs  lib.rs  panels.rs  widgets.rs
crates/vibevj-gui/src/scene_editor/: mod.rs  scene_editor.rs
crates/vibevj-gui/src/scene_editor/nodes/: mod.rs  node.rs
crates/vibevj-scene/: Cargo.toml
crates/vibevj-scene/src/: component.rs  graph.rs  lib.rs  node.rs  renderer.rs  scene.rs
crates/vibevj-scripting/: Cargo.toml
crates/vibevj-scripting/src/: api.rs  engine.rs  lib.rs
src/: app.rs  main.rs  preview_window.rs  scene_state.rs
