[package]
name = "vibevj-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vibevj-common = { path = "../vibevj-common" }

cpal = { workspace = true }
rustfft = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
