[package]
name = "vibevj-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vibevj-common = { path = "../vibevj-common" }

wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
