[package]
name = "vibevj-scripting"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vibevj-common = { path = "../vibevj-common" }
vibevj-scene = { path = "../vibevj-scene" }

rhai = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
